Code with AdSense

--- a/distance.html
+++ b/distance.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distance Converter - Freedom Converter</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="category-styles.css"> </head>
+    <link rel="stylesheet" href="category-styles.css">
+</head>
 <body>
     <header>
         <a href="index.html" class="back-button">Back to Categories</a>
@@ -42,6 +43,20 @@
                 <p id="footballFieldsResult">Football Fields: 0</p>
             </div>
         </div>
+    </div>
+
+    <div class="adsense-banner">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6943906525736487"
+             crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-6943906525736487"
+             data-ad-slot="4200732364"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
     <script src="script.js"></script>
