--- a/volume.html
+++ b/volume.html
@@ -45,6 +45,20 @@
         </div>
     </div>
 
+    <div class="adsense-banner">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6943906525736487"
+             crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-6943906525736487"
+             data-ad-slot="4200732364"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
